Updated logic for adding new pidash app locally in the angular app. Updated logic for retreiving apps stored in the database for the creator user on angular app. Renamed Provider to CredentialProvider. Updated app list style to prevent overflow.

--- a/node/content/css/servermanager.css
+++ b/node/content/css/servermanager.css
@@ -10,7 +10,7 @@ background: #f6f8f9; /* Old browsers */
     background: -webkit-linear-gradient(bottom, #465362 0%,#DEE5E5 50%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to top, #465362 0%,#DEE5E5 50%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#DEE5E5', endColorstr='#465362',GradientType=0 ); /* IE6-9 */
-    padding-top: 15px; padding-bottom: 15px; border-radius: 15px; min-height: 300px!important; height: auto; max-height: 600px;}
+    padding-top: 15px; padding-bottom: 15px; border-radius: 15px; min-height: 300px!important; height: auto;}
 .app-list .app-row {border-top: #011936 2px solid; border-bottom: #011936 2px solid ; background-color: #313D5A; color: #DEE5E5;}
 .app-list .app-row button {float: right;}
 .app-list .app-row button.btn.btn-primary {background-color: #011936; border-color: #DEE5E5; color: #DEE5E5; }
